--- a/index.html
+++ b/index.html
@@ -23,28 +23,28 @@
                 <h1 class="banner-tag1">Idea, innovation, vision and challenges in New Bangladesh.</h1>
                 <button class="explore-btn">Explore New Bangladesh</button>
             </div>
-             <img src="/images/hero.png" alt="">
+             <img src="./images/hero.png" alt="">
         </div>
         <div class="pillars-class">
             <h3 class="pillar-txt">Pillars of "Bangladesh 2.0"</h3>
             <div class="cards">
                 <div class="card1">
-                    <img class="innov-img" src="/images/innovation.png" alt="">
+                    <img class="innov-img" src="./images/innovation.png" alt="">
                     <h2 class="innov-txt">Innovation</h2>
                     <p class="innov-desc">New Bangladesh is embracing innovation to drive sustainable growth and digital transformation.</p>
                 </div>
                 <div class="card1">
-                    <img class="innov-img" src="/images/sustainability.png" alt="">
+                    <img class="innov-img" src="./images/sustainability.png" alt="">
                     <h2 class="innov-txt">Sustainability</h2>
                     <p class="innov-desc">Embracing sustainable practices in Bangladesh ensures a greener future by conserving resources.</p>
                 </div>
                 <div class="card1">
-                    <img class="innov-img" src="/images/infrastructure.png" alt="">
+                    <img class="innov-img" src="./images/infrastructure.png" alt="">
                     <h2 class="innov-txt">Infrastructure</h2>
                     <p class="innov-desc">Advancing resilient infrastructure in Bangladesh will foster economic growth.</p>
                 </div>
                 <div class="card1">
-                    <img class="innov-img" src="/images/empowerment.png" alt="">
+                    <img class="innov-img" src="./images/empowerment.png" alt="">
                     <h2 class="innov-txt">Empowerment</h2>
                     <p class="innov-desc">Empowering communities in Bangladesh through education, technology.</p>
                 </div>
@@ -56,19 +56,19 @@
             <div>
                 <div class="vision-dev">
                     <div class="digital-card">
-                        <img class="innov-img" src="/images/card-icon.png" alt="">
+                        <img class="innov-img" src="./images/card-icon.png" alt="">
                         <h3>Digital Transformation</h3>
                         <p class="innov-desc">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
                         <button class="digital-btn">Learn More</button>
                     </div>
                     <div class="green-card">
-                        <img class="innov-img" src="/images/card-icon.png" alt="">
+                        <img class="innov-img" src="./images/card-icon.png" alt="">
                         <h3>Green Energy</h3>
                         <p class="innov-desc">Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
                         <button class="green-btn">Learn More</button>
                     </div>
                     <div class="modern-card">
-                        <img class="innov-img" src="/images/card-icon.png" alt="">
+                        <img class="innov-img" src="./images/card-icon.png" alt="">
                         <h3>Modern Infrastructure</h3>
                         <p class="innov-desc">Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
                         <button class="modern-btn">Learn More</button>
@@ -77,7 +77,7 @@
             </div>
         </div>
         <div class="quote-class">
-            <img class="quote-img" src="/images/quote-bg.png" alt="">
+            <img class="quote-img" src="./images/quote-bg.png" alt="">
             <p>"When a destitute mother starts earning an income, her dreams of success invariably center around her children. A woman's second priority is the household. She wants to buy utensils, build a stronger roof, or find a bed for herself and her family. A man has an entirely different set of priorities. When a destitute father earns extra income, he focuses more attention on himself. Thus money entering a household through a woman brings more benefits to the family as a whole."</p>
             <h3 class="yunus-name-class">Dr. Muhammad Yunus</h3>
             <p class="advisor-class">Chief Adviser of the People's Republic of Bangladesh</p>
@@ -132,6 +132,10 @@
                 </tr>
               </tbody></table></div>
         </div>
+
     </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
