--- a/index.html
+++ b/index.html
@@ -132,7 +132,28 @@
                 </tr>
               </tbody></table></div>
         </div>
-
+        <section class="recent-sec">
+          <h3 class="recent-title">Recent News</h3>
+          <p class="recent-description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+          <div class="first-card">
+          
+            <img class = "card-img1"src="./images/satelite.png" alt="">
+        
+            <div class="card-content">
+              <h3 class="card-title">Bangladesh Launches New Satellite</h3>
+              <img src="./images/al-jazeera.png" alt="" class="jajeera-img">
+              <div class="timeline">
+                <p class="date">Date: 05/01/2025</p>
+                <p class="time">Time: 10.25 PM</p>
+              </div>
+              <p class="card-des">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+              with a certain degree of justification, be able to speak of humankind as civilized</p>
+              <button class="explore-btn">Read More</button>
+            </div>
+          </div>
+          <div></div>
+          <div></div>
+        </section>
     </main>
     <footer>
 
