everything is done

--- a/index.html
+++ b/index.html
@@ -213,7 +213,12 @@
     </main>
     <footer>
       <section class="footer-note">
-        
+        <h3>Bangladesh 2.0</h3>
+        <div class="icons">
+          <a href="https://www.facebook.com/" class="icon" target = "_blank"><img src="./images/facebook.png" alt=""></a>
+          <a href="https://www.instagram.com/" class="icon" target = "_blank"><img src="./images/instagram.png" alt=""></a>
+          <a href="https://x.com/" class="icon" target = "_blank"><img src="./images/x.png" alt=""></a>
+        </div>
       </section>
 
     </footer>
